# siga

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  Dockerrun.aws.json  LICENSE copy  README.md  Siga-brasil.pem.enc  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.front.yml  docker-compose.prod.yml  docker-compose.yml  dockerrun.aws.json  example.env  package-lock.json  prod.env  tatus  tatus+
backend/: Dockerfile  Dockerfile.prod  README.md  launch.json  pyproject.toml  requirements.txt
backend/app/: celery_worker.py  main.py
backend/app/api/middlewares/: db.py  jwt_bearer.py  mongo_db.py
backend/app/assets/logos/: __init__.py
backend/app/core/: celery_worker.py  config.py  debugger.py  full_time_notifications.py  logging.py  tasks.py
backend/app/core/settings/: __init__.py  app.py  base-production.py  base.py  development.py  production.py  test.py
backend/app/db/: __init__.py  base.py  init_data.py  init_db.py  mongo_session.py  session.py
backend/app/db/init_data/: applications.py  departments.py  holiday.py  roles.py  schools.py  status.py  users.py  users_rol.py
backend/app/domain/errors/: __init__.py  application.py  application_type.py  base.py  department.py  extra.py  rol.py  school.py  token.py  user.py  user_application.py
backend/app/domain/models/: __init__.py  application.py  application_state.py  application_status.py  application_subtype.py  application_type.py  base.py  cron_job.py  department.py  extra.py  holiday.py  holidays.py  rol.py  school.py  state.py  status.py  user.py  user_application.py  userrol.py  users_rol.py  usuario.py
backend/app/domain/policies/: __init__.py  application.py  application_state.py  application_status.py  application_subtype.py  application_type.py  base.py  cron_job.py  deparment.py  rol.py  (+9 more)
backend/tests/: run_test.py
backend/tests/db/: base.py
backend/tests/services/: __init__.py  jwt.py
(+605 files in other folders)
